update-manager (1:0.87.1) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix crash if /var/lib/apt/periodic/update-stamp does not exists
      (LP: #181390)
    - fix misleading string when cache is rebuild (LP: #179354)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Jan 2008 09:53:33 +0100

update-manager (1:0.87) hardy; urgency=low

  * typo fixes (thanks to Brian Murray, LP: #99513, LP: #158175)
  * fix incorrect textual description (thanks to Brian Murray, 
    LP: #145130)
  * support release-upgrades from dapper for architectures on
    ports.ubuntu.com
  * UpdateManager/UpdateManager.py:
    - remove the "from $version to $version" from the main 
      list as this is duplicated information from the details tab
    - wording fixes (thanks to Matthew Paul Thomas)
    - if the update was successful, automatically close the install
      window
    - when no updates are available, display the information when the 
      last apt-get update like operation was performed
    - if there are broken dependencies on the system, try to fix 
      them on startup
  * data/UpdateManager.glade:
    - do not display what software updates are in startup progress
      dialog, this is already displayed in the main UI 
      (thanks to Matthew Paul Thomas)
    - align the ""Download size:" text so that it matches the text
      inside the buttons

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Dec 2007 14:56:12 +0100

update-manager (1:0.86) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - merged fixes from Brian Murray (thanks!);
      LP: #162978, LP: #64473
    - fix getting prerequists for ports.ubuntu.com
      (thanks to lamont)
  * DistUpgrade/DistUpgradeCache.py:
    - keep the lists dir locked all the time to avoid a 
      possible race
  * DistUpgrade/DistUpgrade.cfg:
    - added gobuntu-desktop to the list of supported
      meta-packages
  * data/update-manager.desktop.in: