@@ -4,6 +4,10 @@ update-manager (1:0.87.1) hardy; urgency=low
     - fix crash if /var/lib/apt/periodic/update-stamp does not exists
       (LP: #181390)
     - fix misleading string when cache is rebuild (LP: #179354)
+  * DistUpgrade/DistUpgradeCache.py:
+    - be more careful with the obsoletes checking and get not
+      confused if the hardy version is older than the gutsy one
+      (LP: #181201)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Jan 2008 09:53:33 +0100
 
